working with common data

--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -6,7 +6,7 @@
 <html>
 
 <head>
-    <title>TMS | Tourism Management System</title>
+    <title>RBMS | Room Booking Management System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -68,7 +68,7 @@
         <div class="container">
             <ul class="tp-hd-lft wow fadeInLeft animated" data-wow-delay=".5s">
                 <li class="hm"><a href="{% url 'accounts:home' %}"><i class="fa fa-home"></i></a></li>
-                <li class="hm"><a href="{% url 'custom_admin:login' %}">Admin Login</a></li>
+                <li class="hm"><a href="/admin/">Admin Login</a></li>
             </ul>
             <ul class="tp-hd-rgt wow fadeInRight animated" data-wow-delay=".5s">
                 <li class="tol">Toll Number : 123-4568790</li>
@@ -90,7 +90,7 @@
     <div class="header">
         <div class="container">
             <div class="logo wow fadeInDown animated" data-wow-delay=".5s">
-                <a href="{% url 'accounts:home' %}">Tourism <span>Management System</span></a>
+                <a href="{% url 'accounts:home' %}">Room Booking <span>Management System</span></a>
             </div>
 
             <div class="lock fadeInDown animated" data-wow-delay=".5s">
@@ -163,7 +163,7 @@
     <div class="banner-3 ">
         <div class="container">
             <h1 class="wow zoomIn animated animated" data-wow-delay=".5s"
-                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;">TMS-Tourism Management
+                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;">TMS-Room Booking Management
                 System</h1>
         </div>
     </div>
