--- a/rental_app/templates/app/index.html
+++ b/rental_app/templates/app/index.html
@@ -6,7 +6,7 @@
 <div class="banner">
     <div class="container">
         <h1 class="wow zoomIn animated animated" data-wow-delay=".5s"
-            style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;"> TMS - Tourism Management System
+            style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;"> RBMS - Room Booking Management System
         </h1>
     </div>
 </div>
@@ -21,7 +21,7 @@
             </div>
             <div class="rup-rgt">
                 <h3>UP TO USD. 50 OFF</h3>
-                <h4><a href="offers.html">TRAVEL SMART</a></h4>
+                <h4><a href="offers.html">BOOK SMART</a></h4>
 
             </div>
             <div class="clearfix"></div>
