--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -9,8 +9,10 @@
     <title>RBMS | Room Booking Management System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-
+    <meta name="keywords" content="Room Booking Management System In Django" />
+    <script type="text/javascript">
+        bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
+    </script>
     <script
         type="applijewelleryion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
@@ -96,9 +98,9 @@
             <div class="lock fadeInDown animated" data-wow-delay=".5s">
                 
                 <li>
-                    <form method="get" action="{% url 'rentals:result' %}" role="search" style="margin-right: 10px; width: 500px; display: flex; justify-content: space-between; padding-inline: 10px;">
+                    <form method="get" action="{% url 'rentals:result' %}" role="search" style="margin-right: 10px; width: 360px; display: flex; justify-content: space-between;">
                         <input class="form-control" type="search" name="query" placeholder="Search Vacant Rooms" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit" style="margin-left: 10px;">Search</button>
                     </form>
 
 
