--- a/rental_app/templates/app/booking_notification.html
+++ b/rental_app/templates/app/booking_notification.html
@@ -13,5 +13,5 @@ Please review the booking details and confirm your acceptance by replying to thi
 Thank you for your time and consideration.
 
 Sincerely,
-TMS
+RBMS
 {% endautoescape %}  
