--- a/rental_app/templates/app/add_room.html
+++ b/rental_app/templates/app/add_room.html
@@ -4,17 +4,34 @@
 <div class="privacy">
     <div class="container">
         <h3 class="wow fadeInDown animated animated" data-wow-delay=".5s"
-            style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">Add Room</h3>
+            style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
+            {% if mode == "room" %}
+            Add Room
+            {% elif mode == 'room_u' %}
+            Update Room
+            {% elif mode == 'apartment_u' %}
+            Update Apartment
+            {% else %}
+            Add Apartment
+            {% endif %}
+        </h3>
         <form name="chngpwd" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            
+
             {{form.as_p}}
-            <!-- <p style="width: 350px;">
-                <label for="inputZip" class="form-label">Image: </label>
-                <input type="file" class="form-control" id="inputZip" name="image">
-            </p> -->
+
             <p style="width: 100%;">
-                <button type="submit" name="submit5" class="btn-primary btn">Add</button>
+                <button type="submit" name="submit5" class="btn-primary btn">
+                    {% if mode == "room" %}
+                    Add Room
+                    {% elif mode == 'room_u' %}
+                    Update Room
+                    {% elif mode == 'apartment_u' %}
+                    Update Apartment
+                    {% else %}
+                    Add Apartment
+                    {% endif %}
+                </button>
             </p>
         </form>
 
