--- a/rental_app/templates/app/detail_page.html
+++ b/rental_app/templates/app/detail_page.html
@@ -23,7 +23,12 @@
                 </div>
                 <a href="{% url 'rentals:apartment' room.apartment.id %}"
                     class="view">{{room.apartment.apartment_name}}'s Details</a>
+                {% if room.apartment.landlord.user == user %}
+                <a href="{% url 'rentals:update-room' room.id %}" class="view">Edit Room</a>
+                <a href="{% url 'rentals:delete-room' room.id %}" class="view" style="background-color: red;">Delete Room</a>
+                {% endif %}
                 <div class="clearfix"></div>
+
             </div>
             {% if room.booked %}
 
