--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -48,8 +48,6 @@
                 <li class="prnt">
                     {% if user.role == 'Landlord' %}
                         <a href="{% url 'rentals:add-apartment' %}">Add Apartment</a>
-                    {% else %}
-                        <a href="#">XXX</a>
                     {% endif %}
                 </li>
             </ul>
@@ -187,7 +185,7 @@
                 </ul>
             </div>
             <p class="wow zoomIn animated animated" data-wow-delay=".5s"
-                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;">© 2020 TMS . All Rights
+                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;">Copyright &copy; <script>document.write(new Date().getFullYear());</script> RBMS . All Rights
                 Reserved </p>
         </div>
     </div>
