--- a/accounts/templates/accounts/change-profile.html
+++ b/accounts/templates/accounts/change-profile.html
@@ -9,7 +9,10 @@
         </h3>
         <form name="chngpwd" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
+            <p style="width: 350px;">
+                <b>Email Id:</b>
+                <input type="email" class="form-control" name="email" value={{user.email}} id="email" readonly>
+            </p>
             {{form.as_p}}
 
             <p style="width: 100%;">
