--- a/rental_app/templates/app/booking_confirmation.html
+++ b/rental_app/templates/app/booking_confirmation.html
@@ -6,7 +6,7 @@ Dear {{tenant}},
 
 We are delighted to confirm your booking for {{room.room_number}} at {{owner.username}}'s property. Your booking details are as follows:
 
-Room: {{room.room_number}}
+Room: {{room.room_number}} ({{room.room_type}})
 Apartment name : {{room.apartment.apartment_name}}
 Price: {{room.rent}} {{room.rate}}
 Owner contacts: {{owner.phone}} or {{owner.email}}
