--- a/rental_app/templates/app/booking-history.html
+++ b/rental_app/templates/app/booking-history.html
@@ -26,7 +26,7 @@
                             {{history.room.room_number}}
                         </a>
                         {% else %}
-                            The room was deleted/removed
+                            The room was deleted/removed/set vacant
                         {% endif %}
                             
                         
