--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -23,7 +23,7 @@
                                 <input type="email" name="email" id="email" placeholder="Enter your Email" required="">
                                 <input type="password" name="password" id="password" placeholder="Password" value=""
                                     required="">
-                                <h4><a href="#">Forgot password</a></h4>
+                                <h4><a href="{% url 'accounts:forgot-pass' %}">Forgot password</a></h4>
 
                                 <input type="submit" name="signin" value="SIGNIN">
                             </form>
