--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -37,7 +37,7 @@
             border-radius: 50%;
             margin-left: 15px;
             margin-bottom: 0px;
-            border: 2px solid black;
+            border: 2px solid #fdfbfb;
             background-size: cover;
         }
     </style>
