changing email template

--- a/rental_app/templates/app/booking_confirmation.html
+++ b/rental_app/templates/app/booking_confirmation.html
@@ -11,7 +11,7 @@ Apartment name : {{room.apartment.apartment_name}}
 Price: {{room.rent}} {{room.rate}}
 Owner contacts: {{owner.phone}} or {{owner.email}}
 Location: {{room.apartment.location}}
-Book Time: {{time}}
+Book Time: {{time}} (UTC+0300)
 
 In the meantime, please feel free to contact the landlord if you have any questions or concerns.
 
