--- a/rental_app/templates/app/booking_notification.html
+++ b/rental_app/templates/app/booking_notification.html
@@ -7,7 +7,7 @@ We are pleased to inform you that your room has been booked by {{tenant.username
 Room: {{room.room_number}}
 Apartment name : {{room.apartment.apartment_name}}
 Tenant contacts: {{tenant.phone}} or {{tenant.email}}
-Book Time: {{time}}
+Book Time: {{time}} (UTC+0300)
 Please review the booking details and confirm your acceptance by replying to this email. If you have any questions or concerns, please do not hesitate to contact us.
 
 Thank you for your time and consideration.
