--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -68,7 +68,7 @@
                     <a href="{% url 'rentals:add-apartment' %}">Add Apartment</a>
                 </li>
                 <li class="prnt">
-                    <a href="{% url 'rentals:add-apartment' %}">My Apartments</a>
+                    <a href="{% url 'rentals:my-apartments' %}">My Apartments</a>
                 </li>
                 {% endif %}
             </ul>
