--- a/rental_app/static/css/style.css
+++ b/rental_app/static/css/style.css
@@ -135,7 +135,7 @@ i.fa.fa-lock {
 /*-- /header --*/
 /*-- banner --*/
 .banner {
-    background: url(../images/3.jpg)no-repeat;
+    background: url(../images/image.png)no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -148,7 +148,7 @@ i.fa.fa-lock {
     margin-bottom: 40px;
     padding: 4em 0 0;
     text-align: center;
-    color: #ffffff;
+    color: #34ad00;
 }
 .bann-info h2 {
     font-size: 26px;
