--- a/rental_app/templates/app/apartment.html
+++ b/rental_app/templates/app/apartment.html
@@ -13,7 +13,8 @@
                     <p class="dow">#{{apartment.location}}</p>
                     <p><b>Facilities paid for :</b> {{apartment.paid_for}}</p>
                     <p><b>Description :</b> {{apartment.description}}</p>
-                    <p><b>Free Features</b> {{apartment.facilities}}</p>
+                    <p><b>Free Features: </b> {{apartment.facilities}}</p>
+                    <p><b>Total rooms: </b> {{length}} (rooms)</p>
                     <div class="clearfix"></div>
                     <div class="grand">
                         <h2>Landlord details: </h2>
