--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -103,7 +103,7 @@
                 <li class="hm"><a href="/admin/">Admin Login</a></li>
             </ul>
             <ul class="tp-hd-rgt wow fadeInRight animated" data-wow-delay=".5s">
-                <li class="tol">Toll Number : 123-4568790</li>
+                <li class="tol">Toll Number : +254 758 053 542</li>
                 <li class="sig"><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
                 <li class="sigi"><a href="#" data-toggle="modal" data-target="#myModal4">Sign In</a></li>
             </ul>
