--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -215,11 +215,9 @@
             <div class="footer-social-icons wow fadeInDown animated animated" data-wow-delay=".5s"
                 style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
                 <ul>
-                    <li><a class="facebook" href="#"><span>Facebook</span></a></li>
-                    <li><a class="twitter" href="#"><span>Twitter</span></a></li>
-                    <li><a class="flickr" href="#"><span>Flickr</span></a></li>
-                    <li><a class="googleplus" href="#"><span>Google+</span></a></li>
-                    <li><a class="dribbble" href="#"><span>Dribbble</span></a></li>
+                    {% for media in medias %}
+                        <li><a class="{{media.icon}}" href="{{media.link}}"><span>{{media.name}}</span></a></li>
+                    {% endfor %}
                 </ul>
             </div>
             <p class="wow zoomIn animated animated" data-wow-delay=".5s"
