--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -15,18 +15,18 @@
     </script>
     <script
         type="applijewelleryion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
-    <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
+    <link href="{% static 'main/css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
+    <link href="{% static 'main/css/style.css' %}" rel='stylesheet' type='text/css' />
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+    <link href="{% static 'main/css/font-awesome.css' %}" rel="stylesheet">
     <!-- Custom Theme files -->
-    <script src="{% static 'js/jquery-1.12.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'main/js/jquery-1.12.0.min.js' %}"></script>
+    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
     <!--animate-->
-    <link href="{% static 'css/animate.css' %}" rel="stylesheet" type="text/css" media="all">
-    <script src="{% static 'js/wow.min.js' %}"></script>
+    <link href="{% static 'main/css/animate.css' %}" rel="stylesheet" type="text/css" media="all">
+    <script src="{% static 'main/js/wow.min.js' %}"></script>
     <script>
         new WOW().init();
     </script>
